2009-04-27  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gsearchtool-support.c (compare_regex):  Minor logic fix.
	
	NOTE: Git is a usability nightmare.  I fear the number
	of GNOME volunteers will decrease as a result of this version
	control change, but I hope I am wrong.
	
2009-04-26  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gsearchtool-support.c (compare_regex):  Fix memory leak.
	Bug 579461.

2009-03-29  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gsearchtool.c (setup_case_insensitive_arguments): If grep
	supports the -I argument then use it. Bug 568840.

2009-03-24  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gsearchtool-support.c (get_file_pixbuf): Use a better key
	for the icon hash table, g_icon_to_string().

2009-03-22  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gsearchtool.c (add_no_files_found_message),
	(spawn_search_command), (create_search_results_section):
	* gsearchtool.h: Hide the treeview columns when files
	are not found. 

2009-03-18  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gsearchtool.c (set_constraint_gconf_boolean): Typo

2009-03-18  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gsearchtool-callbacks.c (open_file_cb), (open_folder_cb),
	(move_to_trash_cb), (file_button_release_event_cb), 
	(drag_file_cb), (save_results_cb):
	* gsearchtool-support.c (open_file_with_filemanager),
	(open_file_with_application):
	* gsearchtool-support.h:
	* gsearchtool.c (add_file_to_search_results),
	(add_no_files_found_message), (handle_goption_args),
	(handle_search_command_stdout_io), 
	(create_search_results_section):
	* gsearchtool.h:
	Bug 557256: Find results missing files with incorrect 
	filename encoding

2009-03-16  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gsearchtool-callbacks.c (click_help_cb): Replace deprecated
	gnome_help_display_desktop_on_screen() with gtk_show_uri().
	
2009-03-16  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gnome-search-tool.1:  Update man page
