@@ -1,3 +1,8 @@
+2009-04-28  Dennis Cranston  <dennis_cranston@yahoo.com>
+
+	* gsearchtool-callbacks.c (build_popup_menu_for_file):  
+	See bug 546916 -- Sync open menu with recent nautilus changes.
+	
 2009-04-27  Dennis Cranston  <dennis_cranston@yahoo.com>
 
 	* gsearchtool-support.c (compare_regex):  Minor logic fix.
